generate fetch settings
