# server/model/inlineResponse2002.ts
@@ -1,0 +1,32 @@
+/**
+ * Api Definitions
+ * Only for Api
+ *
+ * The version of the OpenAPI document: 0.1.0
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+import { RequestFile } from './models';
+import { Settings } from './settings';
+
+export class InlineResponse2002 {
+    'settings': Settings;
+
+    static discriminator: string | undefined = undefined;
+
+    static attributeTypeMap: Array<{name: string, baseName: string, type: string}> = [
+        {
+            "name": "settings",
+            "baseName": "settings",
+            "type": "Settings"
+        }    ];
+
+    static getAttributeTypeMap() {
+        return InlineResponse2002.attributeTypeMap;
+    }
+}
+
