# server/model/settings.ts
@@ -1,0 +1,43 @@
+/**
+ * Api Definitions
+ * Only for Api
+ *
+ * The version of the OpenAPI document: 0.1.0
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+import { RequestFile } from './models';
+
+export class Settings {
+    'id'?: string;
+    'isUnderMaintenance': number;
+    'maintenanceMessage': string;
+
+    static discriminator: string | undefined = undefined;
+
+    static attributeTypeMap: Array<{name: string, baseName: string, type: string}> = [
+        {
+            "name": "id",
+            "baseName": "_id",
+            "type": "string"
+        },
+        {
+            "name": "isUnderMaintenance",
+            "baseName": "isUnderMaintenance",
+            "type": "number"
+        },
+        {
+            "name": "maintenanceMessage",
+            "baseName": "maintenanceMessage",
+            "type": "string"
+        }    ];
+
+    static getAttributeTypeMap() {
+        return Settings.attributeTypeMap;
+    }
+}
+
